refactor ref update, swagger
